arreglo de rutas

--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -22,6 +22,7 @@
           </div>
 
           <article class="text-left">
+            <h2><%= product.id %></h2>
             <h3 class="title-principal p-2"><%= product.titulo %></h3>
             <span class="title-principal2 p-2"
               ><%= product.cantidad %> x <%= product.precio %>
