--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -107,7 +107,7 @@
                         <i class="fas fa-list-ul"></i> Categorias
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="../product">Todos los Productos</a>
+                        <a class="dropdown-item" href="/products">Todos los Productos</a>
                         <a class="dropdown-item" href="#">Variedad de Cervezas</a>
                         <a class="dropdown-item" href="#">Presentaciones</a>
                         <a class="dropdown-item" href="#">Promociones</a>
