--- a/views/product-edit-form.ejs
+++ b/views/product-edit-form.ejs
@@ -17,7 +17,7 @@
                 </div>
                 <div class="dropdown-divider"></div>
                 <!-- titulo de venta -->
-                    <h4 class="mb-4 mt-4">Estas editando el producto <%= product.titulo %> </h4>
+                    <h4 class="mb-4 mt-4">Estas editando el producto <%= product.titulo %> <% product.id %>  </h4>
                 <div class="row align-items-center">
                     <div class="form-group col-9">
                         <label for="sell_title">Título del Anuncio</label>
