--- a/views/products.ejs
+++ b/views/products.ejs
@@ -21,7 +21,7 @@
       <% for( let products of listado ) { %>
         <div class="col-12 col-sm-6 col-lg-3">
           <section class="product-box">
-            <a href="/product/<%=products.id%>">
+            <a href="/products/<%=products.id%>">
               <figure class="product-box_image">
                 <img src="<%=products.image1%>" alt="imagen de producto" />
                 <article class="product-box_data">
