--- a/views/partials/body_masVendido.ejs
+++ b/views/partials/body_masVendido.ejs
@@ -1,4 +1,4 @@
-<section>
+<section id="masVendidos">
   <div class="categorias-title">
     <h2 class="title_categoria border-bottom">Lo más vendido</h2>
   </div>
