--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
                         type="button">Vende</button></a>
                 <a class="nav-link text-black-50" href="./product_cart.ejs"><i class="fas fa-shopping-basket"></i></a>
                 <a class="nav-link text-black-50 d-none d-md-block" href="#"><i class="far fa-heart"></i></a>
-                <a class="nav-link text-black-50 d-none d-md-block" href="./register.ejs">Registro</i></a>
+                <a class="nav-link text-black-50 d-none d-md-block" href="/auth/register">Registro</i></a>
                 <a class="nav-link text-black-50 d-none d-md-block active" href="#">Inicio de Sesión</i></a>
 
                 <!--nav mobile-->
@@ -42,16 +42,16 @@
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./register.ejs"><i class="far fa-user-circle"></i> Registrate</a>
+                        <a class="nav-link" href="/auth/register"><i class="far fa-user-circle"></i> Registrate</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="far fa-heart"></i> Favoritos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-dollar-sign"></i> Ofertas</a>
+                        <a class="nav-link" href="/#ofertas"><i class="fas fa-dollar-sign"></i> Ofertas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="far fa-bell"></i> Mas Vendidos<span
+                        <a class="nav-link" href="/#masVendidos"><i class="far fa-bell"></i> Mas Vendidos<span
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropdown">
@@ -71,9 +71,6 @@
                         </div>
                     </li>
                     <div class="dropdown-divider"></div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-bath"></i> Tiendas Oficiales</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="fas fa-kiwi-bird"></i> Nosotros</a>
@@ -117,13 +114,10 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Ofertas</a>
+                    <a class="nav-link" href="/#ofertas">Ofertas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Mas Vendidos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Tiendas Oficiales</a>
+                    <a class="nav-link" href="/#masVendidos">Mas Vendidos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Nosotros </a>
