--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <%- include("partials/head", {title: "Home"}) %>
-  </head>
+  <!--head-->
+  <%- include("partials/head", {title: "Canilla Libre - BeerMarket®"}) %>
+
   <body class="home">
     <!--header/javi -->
     <%- include("partials/header") %>
