en funcionamiento el registro con ID

--- a/views/partials/body_categorias.ejs
+++ b/views/partials/body_categorias.ejs
@@ -4,7 +4,7 @@
   </div>
   <div class="container">
     <ul
-      class="list-group list-group-horizontal-lg mb-5 d-flex justify-content-center p-0"
+      class="list-group list-group-horizontal-lg mb-5 p-0 d-flex justify-content-center"
     >
       <li class="list-group-item">
         <div class="media">
@@ -59,6 +59,20 @@
         <div class="media">
           <a href="#">
             <img class="mr-3" src="img/categorias/lambic.svg" alt="lambic" />
+          </a>
+        </div>
+      </li>
+      <li class="list-group-item">
+        <div class="media">
+          <a href="#">
+            <img class="mr-3" src="img/categorias/porter.svg" alt="porter" />
+          </a>
+        </div>
+      </li>
+      <li class="list-group-item">
+        <div class="media">
+          <a href="#">
+            <img class="mr-3" src="img/categorias/pilsen.svg" alt="pilsen" />
           </a>
         </div>
       </li>
