--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -57,10 +57,10 @@
   />
 
   <!--css Style-->
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/register_style.css" />
-  <link rel="stylesheet" href="css/product_detail.css" />
-  <link rel="stylesheet" href="css/Product_cart.css" />
+  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/register_style.css" />
+  <link rel="stylesheet" href="/css/product_detail.css" />
+  <link rel="stylesheet" href="/css/Product_cart.css" />
 
   <!--boostrap script-->
   <script
