--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
             <!--search / xl-->
             <div class="d-flex justify-content-end align-items-center w-100 ml-auto ">
                 <a class="navbar-brand mr-auto" href="/">
-                    <img src="img/header/logo_header.svg" width="120" class="d-inline-block align-top"
+                    <img src="/img/header/logo_header.svg" width="120" class="d-inline-block align-top"
                         alt="Canilla Libre">
                 </a>
 
@@ -20,9 +20,9 @@
                     </div>
                 </div>
 
-                <a href="./form_prod.ejs"><button class="btn btn-outline-warning ml-auto"
+                <a href="/form_prod.ejs"><button class="btn btn-outline-warning ml-auto"
                         type="button">Vende</button></a>
-                <a class="nav-link text-black-50" href="./product_cart.ejs"><i class="fas fa-shopping-basket"></i></a>
+                <a class="nav-link text-black-50" href="/product_cart.ejs"><i class="fas fa-shopping-basket"></i></a>
                 <a class="nav-link text-black-50 d-none d-md-block" href="#"><i class="far fa-heart"></i></a>
                 <a class="nav-link text-black-50 d-none d-md-block" href="/auth/register">Registro</i></a>
                 <a class="nav-link text-black-50 d-none d-md-block active" href="#">Inicio de Sesión</i></a>
