--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
             <!--search / xl-->
             <div class="d-flex justify-content-end align-items-center w-100 ml-auto ">
                 <a class="navbar-brand mr-auto" href="/">
-                    <img src="img/header/logo_header.svg" width="120" class="d-inline-block align-top"
+                    <img src="/img/header/logo_header.svg" width="120" class="d-inline-block align-top"
                         alt="Canilla Libre">
                 </a>
 
