--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,12 +1,12 @@
 <title><%= title %> - Canilla Libre - BeerMarket®</title>
 
 <!--favicon-->
-<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-<link rel="manifest" href="img/favicon/site.webmanifest" />
+<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png" />
+<link rel="manifest" href="/img/favicon/site.webmanifest" />
 <link
   rel="mask-icon"
-  href="img/favicon/safari-pinned-tab.svg"
+  href="/img/favicon/safari-pinned-tab.svg"
   color="#5bbad5"
 />
 <meta name="msapplication-TileColor" content="#da532c" />
@@ -37,10 +37,10 @@
 />
 
 <!--css Style-->
-<link rel="stylesheet" href="css/style.css" />
-<link rel="stylesheet" href="css/register_style.css" />
-<link rel="stylesheet" href="css/product_detail.css" />
-<link rel="stylesheet" href="css/Product_cart.css" />
+<link rel="stylesheet" href="/css/style.css" />
+<link rel="stylesheet" href="/css/register_style.css" />
+<link rel="stylesheet" href="/css/product_detail.css" />
+<link rel="stylesheet" href="/css/Product_cart.css" />
 
 <!--boostrap script-->
 <script
